--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -4,10 +4,17 @@
 <head> 
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="{% static 'css/base.css' %}"
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
 </head>
 <body>
     {% include 'app/navbar.html' %}
+    
+    <div class="basepage">
+    {% if user.is_authenticated %}
+        <p>Hi {{ user.username }}</p>
+        <a href="{% url 'logout' %}">Logout</a>
+    {% endif %}
+    </div>
     {% block content %} 
     {% endblock content %} 
     <script src="{% static 'js/base.js' %}"></script>
