--- a/app/templates/app/cake_create.html
+++ b/app/templates/app/cake_create.html
@@ -6,8 +6,8 @@
         {% csrf_token%}
         {{form.as_p}}
         <input type="submit" value="Save">
-
     </form>
+    <a href="{% url 'cake' %}">Back</a>
 
 
  {% endblock content %}
