--- a/app/templates/app/cake_list.html
+++ b/app/templates/app/cake_list.html
@@ -1,14 +1,40 @@
 {% extends 'app/base.html' %}
 {% load static %}  
 {% block content %}
-<a href="{% url 'cake_create' %}">+ New Cake Post</a>
-<div class="nav-right">   
-</div>
-    {% for post in posts %}
-        <div class="post-entry">
-            <h2><a href="{% url 'cake_detail' post.pk %}">{{post.title}}</a></h2>
-            
-        </div>
-    {% endfor %}
+    {% if user.is_authenticated %}
+        <a href="{% url 'cake_create' %}" class="cakepage">New Cake Post</a>
+    {% endif %}
+    <div class="cake">
+        {% for post in posts %}         
+            <div class="cake_product">
+                <div class="cake_image">
+                    {% if post.image %}
+                        <img src="{{ post.image.url }}">
+                    {% endif %}
+                </div>
+                <div class="dropdown">
+                        {% if user.is_authenticated %}
+                        <button class="dropbtn">...</button>
+                        {% endif %}
+                        <div class="dropdown-content">
+                            {% if user.is_authenticated %}
+                            <a href="{% url 'cake_update' post.pk %}">Edit</a> 
+                            <a href="{% url 'cake_delete' post.pk %}">Delete</a> 
+                            {% endif %}
+                        </div>
+                </div>
+                <div class="cake_content">
+                    <p>{{ post.name }}</p>
+                    <div class="cake_cart">
+                        <form action="{% url 'add_cart' post.id %}" method="POST">
+                            {% csrf_token %}
+                            <button class="icon_cart">Cart</button>
+                        </form>
+                    </div>
+                    <div class="cake_price">₱{{ post.price }}</div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
 
  {% endblock content %}
