--- a/app/templates/app/cake_update.html
+++ b/app/templates/app/cake_update.html
@@ -6,8 +6,7 @@
         {% csrf_token%}
         {{form.as_p}}
         <input type="submit" value="Update">
-
     </form>
-
+    <a href="{% url 'cake' %}">Back</a>
 
  {% endblock content %}
