--- a/app/templates/app/navbar.html
+++ b/app/templates/app/navbar.html
@@ -3,6 +3,8 @@
     <a href="{% url 'home' %}">Home</a> 
     <a href="{% url 'about' %}">About</a> 
     <a href="{% url 'cake' %}">Cake</a> 
+    <a href="{% url 'login' %}">Login</a>
+    <a href="{% url 'cart' %}">Your Cart</a>
     <div class="animation"></div>
     </nav>
 </body>
